First Commit, Practice manipulating data/state

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
+*{
+  margin: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  border: solid purple;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin: 1em auto;
+  width: 60vw;
+  height: 80vh;
+  min-height: 100vh;
+  text-align: center;
+  padding: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+.studentInfoContainer{
+  display: flex;
+  /* min-height: 30%; */
+  height: 30%;
+  /* justify-content: space-between; */
+  border: solid black;
+}
+.studentNameParagraph{
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  width: 60%;
+  border-right: solid black;
+}
+.studentName{
+  width: 100%;
+  border-bottom: solid black;
+  padding-bottom: 1em;
+}
+.studentParagraph{
+  
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.studentScoreContainer{
+  width: 40%;
+  margin: 0 ;
+}
+.scoresAndDatesContainer{
+  display: flex;
+  flex-flow: column nowrap;
+
+  justify-content: space-around;
+  height: 100%;
 }
