--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin: 1em auto;
-  width: 60vw;
+  width: 80vw;
   height: 80vh;
   min-height: 100vh;
   text-align: center;
@@ -24,29 +24,46 @@
 }
 .studentNameParagraph{
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-between; */
   flex-direction: column;
-  width: 60%;
+  width: 70%;
   border-right: solid black;
 }
 .studentName{
   width: 100%;
   border-bottom: solid black;
-  padding-bottom: 1em;
+  padding: 1em 0 1em 0;
 }
 .studentParagraph{
-  
+  font-size: small;
   width: 100%;
 }
 
 .studentScoreContainer{
-  width: 40%;
+  width: 30%;
   margin: 0 ;
 }
 .scoresAndDatesContainer{
   display: flex;
   flex-flow: column nowrap;
-
   justify-content: space-around;
   height: 100%;
+}
+
+.scoresAfter2018{
+  background-color: yellow;
+}
+
+.scoreHigh{
+  background-color: green;
+}
+.scoreLow{
+  background-color: red;
+}
+
+/* -----------------------Button controls------------------ */
+.btnContainer{
+  margin: 1em 0;
+  display:flex;
+  justify-content: space-around;
 }
